# ROSA

./: .gitignore  Cargo.toml  Stylus.toml  package-lock.json  package.json
contracts/stylus-rosa/: Cargo.toml
contracts/stylus-rosa/src/: lib.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/fund/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: contractAddresses.json  rosa.ts  zerodev.ts
scripts/: deploy_mock_erc20.js
