[package]
name = "stylus-rosa"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"
mini-alloc = "0.9.2"
stylus-sdk = "0.5.2"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[lib]
crate-type = ["lib", "cdylib"]
