[package]
name = "stylus-rosa"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "1.5.7"
alloy-sol-types = "1.5.7"
mini-alloc = "0.9.2"
stylus-sdk = "0.10.7"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true

[lib]
crate-type = ["lib", "cdylib"]
